<resources>
    <string name="app_name">instagram</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_text">Login</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="new_here_text">New Here ?</string>
    <string name="sign_up_text">Sign up</string>
    <string name="name_text">Name</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="privacy_text">By creating an account, you agree to the \nTerms and Use and Privacy Policy</string>
    <string name="already_account_text">Already have an account ?</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>